k8s/app-contador.yaml
#####################
# app-contador ----------------------------------------------
#####################
---
apiVersion: v1
kind: Service
metadata:
  name: app-contador-service
  namespace: intro-k8s
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080   # <- Prestar atencion
      targetPort: 8000
  selector:
    app: app-contador # <-
