k8s/app-saludo.yaml
#####################
# app-saludo ----------------------------------------------
#####################
---
apiVersion: v1
kind: Service
metadata:
  name: app-saludo-service
  namespace: intro-k8s
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081   # <- Prestar atencion
      targetPort: 8000
  selector:
    app: app-saludo # <-
